--- a/assets/sass/_foundation-extend.scss
+++ b/assets/sass/_foundation-extend.scss
@@ -49,3 +49,10 @@ $xxlarge-up;
     }
   }
 }
+
+.full-width {
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: initial;
+}
