--- a/style.css
+++ b/style.css
@@ -3040,6 +3040,12 @@ throughout this theme's SASS files.
   .button.xxlarge-expand {
     width: 100%; } }
 
+.full-width {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial; }
+
 /*
 Base element settings (no classes or id's).
 
