--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -32,22 +32,18 @@ body.home {
     }
   }
 
-  #home-products {
+  #home-services {
     position: relative;
-    background: $primary-color;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin-top: 30px;
 
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background: url("assets/images/random-grey-variations.png");
-      opacity: 0.4;
+    .fa {
+      text-align: center;
+      font-size: 4em;
+      display: block;
+    }
+
+    h3, .fa {
+      text-align: center;
+      color: #000;
     }
 
     .button {
