CTA Area implemented. It is handled entirely through the Customizer. Some bits can't be live-refreshed very well due to how Foundation's Tabs feature works however, so I have it log a little note in the Console when that occurs. Closes #10

--- a/style.css
+++ b/style.css
@@ -787,201 +787,6 @@ th.hide-for-touch {
   th.show-for-print {
     display: table-cell !important; } }
 
-.accordion {
-  margin-bottom: 0; }
-  .accordion:before, .accordion:after {
-    content: " ";
-    display: table; }
-  .accordion:after {
-    clear: both; }
-  .accordion .accordion-navigation, .accordion dd {
-    display: block;
-    margin-bottom: 0 !important; }
-    .accordion .accordion-navigation.active > a, .accordion dd.active > a {
-      background: #e8e8e8; }
-    .accordion .accordion-navigation > a, .accordion dd > a {
-      background: #EFEFEF;
-      color: #222222;
-      padding: 1rem;
-      display: block;
-      font-family: "Helvetica", sans-serif;
-      font-size: 1rem; }
-      .accordion .accordion-navigation > a:hover, .accordion dd > a:hover {
-        background: #e3e3e3; }
-    .accordion .accordion-navigation > .content, .accordion dd > .content {
-      display: none;
-      padding: 0.9375rem; }
-      .accordion .accordion-navigation > .content.active, .accordion dd > .content.active {
-        display: block;
-        background: #FFFFFF; }
-
-/* Clearing Styles */
-.clearing-thumbs, [data-clearing] {
-  margin-bottom: 0;
-  margin-left: 0;
-  list-style: none; }
-  .clearing-thumbs:before, .clearing-thumbs:after, [data-clearing]:before, [data-clearing]:after {
-    content: " ";
-    display: table; }
-  .clearing-thumbs:after, [data-clearing]:after {
-    clear: both; }
-  .clearing-thumbs li, [data-clearing] li {
-    float: left;
-    margin-right: 10px; }
-  .clearing-thumbs[class*="block-grid-"] li, [data-clearing][class*="block-grid-"] li {
-    margin-right: 0; }
-
-.clearing-blackout {
-  background: #333333;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 998; }
-  .clearing-blackout .clearing-close {
-    display: block; }
-
-.clearing-container {
-  position: relative;
-  z-index: 998;
-  height: 100%;
-  overflow: hidden;
-  margin: 0; }
-
-.clearing-touch-label {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  color: #AAAAAA;
-  font-size: 0.6em; }
-
-.visible-img {
-  height: 95%;
-  position: relative; }
-  .visible-img img {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin-left: -50%;
-    max-height: 100%;
-    max-width: 100%; }
-
-.clearing-caption {
-  color: #CCCCCC;
-  font-size: 0.875em;
-  line-height: 1.3;
-  margin-bottom: 0;
-  text-align: center;
-  bottom: 0;
-  background: #333333;
-  width: 100%;
-  padding: 10px 30px 20px;
-  position: absolute;
-  left: 0; }
-
-.clearing-close {
-  z-index: 999;
-  padding-left: 20px;
-  padding-top: 10px;
-  font-size: 30px;
-  line-height: 1;
-  color: #CCCCCC;
-  display: none; }
-  .clearing-close:hover,
-  .clearing-close:focus {
-    color: #CCCCCC; }
-
-.clearing-assembled .clearing-container {
-  height: 100%; }
-  .clearing-assembled .clearing-container .carousel > ul {
-    display: none; }
-
-.clearing-feature li {
-  display: none; }
-  .clearing-feature li.clearing-featured-img {
-    display: block; }
-
-@media only screen and (min-width: 40.063em) {
-  .clearing-main-prev,
-  .clearing-main-next {
-    position: absolute;
-    height: 100%;
-    width: 40px;
-    top: 0; }
-    .clearing-main-prev > span,
-    .clearing-main-next > span {
-      position: absolute;
-      top: 50%;
-      display: block;
-      width: 0;
-      height: 0;
-      border: solid 12px; }
-      .clearing-main-prev > span:hover,
-      .clearing-main-next > span:hover {
-        opacity: 0.8; }
-  .clearing-main-prev {
-    left: 0; }
-    .clearing-main-prev > span {
-      left: 5px;
-      border-color: transparent;
-      border-right-color: #CCCCCC; }
-  .clearing-main-next {
-    right: 0; }
-    .clearing-main-next > span {
-      border-color: transparent;
-      border-left-color: #CCCCCC; }
-  .clearing-main-prev.disabled,
-  .clearing-main-next.disabled {
-    opacity: 0.3; }
-  .clearing-assembled .clearing-container .carousel {
-    background: rgba(51, 51, 51, 0.8);
-    height: 120px;
-    margin-top: 10px;
-    text-align: center; }
-    .clearing-assembled .clearing-container .carousel > ul {
-      display: inline-block;
-      z-index: 999;
-      height: 100%;
-      position: relative;
-      float: none; }
-      .clearing-assembled .clearing-container .carousel > ul li {
-        display: block;
-        width: 120px;
-        min-height: inherit;
-        float: left;
-        overflow: hidden;
-        margin-right: 0;
-        padding: 0;
-        position: relative;
-        cursor: pointer;
-        opacity: 0.4;
-        clear: none; }
-        .clearing-assembled .clearing-container .carousel > ul li.fix-height img {
-          height: 100%;
-          max-width: none; }
-        .clearing-assembled .clearing-container .carousel > ul li a.th {
-          border: none;
-          box-shadow: none;
-          display: block; }
-        .clearing-assembled .clearing-container .carousel > ul li img {
-          cursor: pointer !important;
-          width: 100% !important; }
-        .clearing-assembled .clearing-container .carousel > ul li.visible {
-          opacity: 1; }
-        .clearing-assembled .clearing-container .carousel > ul li:hover {
-          opacity: 0.8; }
-  .clearing-assembled .clearing-container .visible-img {
-    background: #333333;
-    overflow: hidden;
-    height: 85%; }
-  .clearing-close {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    padding-left: 0;
-    padding-top: 0; } }
-
 .row, .technical-documents {
   width: 100%;
   margin-left: auto;
@@ -1801,6 +1606,255 @@ th.hide-for-touch {
     position: relative;
     right: 91.6666666667%;
     left: auto; } }
+
+.tabs {
+  margin-bottom: 0 !important;
+  margin-left: 0; }
+  .tabs:before, .tabs:after {
+    content: " ";
+    display: table; }
+  .tabs:after {
+    clear: both; }
+  .tabs dd, .tabs .tab-title {
+    position: relative;
+    margin-bottom: 0 !important;
+    list-style: none;
+    float: left; }
+    .tabs dd > a, .tabs .tab-title > a {
+      outline: none;
+      display: block;
+      background-color: #EFEFEF;
+      color: #222222;
+      padding: 1rem 2rem;
+      font-family: "Helvetica", sans-serif;
+      font-size: 1rem; }
+      .tabs dd > a:hover, .tabs .tab-title > a:hover {
+        background-color: #e1e1e1; }
+    .tabs dd.active a, .tabs .tab-title.active a {
+      background-color: #FFFFFF;
+      color: #222222; }
+  .tabs.radius dd:first-child a, .tabs.radius .tab:first-child a {
+    -webkit-border-bottom-left-radius: 3px;
+    -webkit-border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px; }
+  .tabs.radius dd:last-child a, .tabs.radius .tab:last-child a {
+    -webkit-border-bottom-right-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px; }
+  .tabs.vertical dd, .tabs.vertical .tab-title {
+    position: inherit;
+    float: none;
+    display: block;
+    top: auto; }
+
+.tabs-content {
+  margin-bottom: 1.5rem;
+  width: 100%; }
+  .tabs-content:before, .tabs-content:after {
+    content: " ";
+    display: table; }
+  .tabs-content:after {
+    clear: both; }
+  .tabs-content > .content {
+    display: none;
+    float: left;
+    padding: 0.9375rem 0;
+    width: 100%; }
+    .tabs-content > .content.active {
+      display: block;
+      float: none; }
+    .tabs-content > .content.contained {
+      padding: 0.9375rem; }
+  .tabs-content.vertical {
+    display: block; }
+    .tabs-content.vertical > .content {
+      padding: 0 0.9375rem; }
+
+@media only screen and (min-width: 40.063em) {
+  .tabs.vertical {
+    width: 20%;
+    max-width: 20%;
+    float: left;
+    margin: 0 0 1.25rem; }
+  .tabs-content.vertical {
+    width: 80%;
+    max-width: 80%;
+    float: left;
+    margin-left: -1px;
+    padding-left: 1rem; } }
+
+.no-js .tabs-content > .content {
+  display: block;
+  float: none; }
+
+/* Clearing Styles */
+.clearing-thumbs, [data-clearing] {
+  margin-bottom: 0;
+  margin-left: 0;
+  list-style: none; }
+  .clearing-thumbs:before, .clearing-thumbs:after, [data-clearing]:before, [data-clearing]:after {
+    content: " ";
+    display: table; }
+  .clearing-thumbs:after, [data-clearing]:after {
+    clear: both; }
+  .clearing-thumbs li, [data-clearing] li {
+    float: left;
+    margin-right: 10px; }
+  .clearing-thumbs[class*="block-grid-"] li, [data-clearing][class*="block-grid-"] li {
+    margin-right: 0; }
+
+.clearing-blackout {
+  background: #333333;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 998; }
+  .clearing-blackout .clearing-close {
+    display: block; }
+
+.clearing-container {
+  position: relative;
+  z-index: 998;
+  height: 100%;
+  overflow: hidden;
+  margin: 0; }
+
+.clearing-touch-label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #AAAAAA;
+  font-size: 0.6em; }
+
+.visible-img {
+  height: 95%;
+  position: relative; }
+  .visible-img img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -50%;
+    max-height: 100%;
+    max-width: 100%; }
+
+.clearing-caption {
+  color: #CCCCCC;
+  font-size: 0.875em;
+  line-height: 1.3;
+  margin-bottom: 0;
+  text-align: center;
+  bottom: 0;
+  background: #333333;
+  width: 100%;
+  padding: 10px 30px 20px;
+  position: absolute;
+  left: 0; }
+
+.clearing-close {
+  z-index: 999;
+  padding-left: 20px;
+  padding-top: 10px;
+  font-size: 30px;
+  line-height: 1;
+  color: #CCCCCC;
+  display: none; }
+  .clearing-close:hover,
+  .clearing-close:focus {
+    color: #CCCCCC; }
+
+.clearing-assembled .clearing-container {
+  height: 100%; }
+  .clearing-assembled .clearing-container .carousel > ul {
+    display: none; }
+
+.clearing-feature li {
+  display: none; }
+  .clearing-feature li.clearing-featured-img {
+    display: block; }
+
+@media only screen and (min-width: 40.063em) {
+  .clearing-main-prev,
+  .clearing-main-next {
+    position: absolute;
+    height: 100%;
+    width: 40px;
+    top: 0; }
+    .clearing-main-prev > span,
+    .clearing-main-next > span {
+      position: absolute;
+      top: 50%;
+      display: block;
+      width: 0;
+      height: 0;
+      border: solid 12px; }
+      .clearing-main-prev > span:hover,
+      .clearing-main-next > span:hover {
+        opacity: 0.8; }
+  .clearing-main-prev {
+    left: 0; }
+    .clearing-main-prev > span {
+      left: 5px;
+      border-color: transparent;
+      border-right-color: #CCCCCC; }
+  .clearing-main-next {
+    right: 0; }
+    .clearing-main-next > span {
+      border-color: transparent;
+      border-left-color: #CCCCCC; }
+  .clearing-main-prev.disabled,
+  .clearing-main-next.disabled {
+    opacity: 0.3; }
+  .clearing-assembled .clearing-container .carousel {
+    background: rgba(51, 51, 51, 0.8);
+    height: 120px;
+    margin-top: 10px;
+    text-align: center; }
+    .clearing-assembled .clearing-container .carousel > ul {
+      display: inline-block;
+      z-index: 999;
+      height: 100%;
+      position: relative;
+      float: none; }
+      .clearing-assembled .clearing-container .carousel > ul li {
+        display: block;
+        width: 120px;
+        min-height: inherit;
+        float: left;
+        overflow: hidden;
+        margin-right: 0;
+        padding: 0;
+        position: relative;
+        cursor: pointer;
+        opacity: 0.4;
+        clear: none; }
+        .clearing-assembled .clearing-container .carousel > ul li.fix-height img {
+          height: 100%;
+          max-width: none; }
+        .clearing-assembled .clearing-container .carousel > ul li a.th {
+          border: none;
+          box-shadow: none;
+          display: block; }
+        .clearing-assembled .clearing-container .carousel > ul li img {
+          cursor: pointer !important;
+          width: 100% !important; }
+        .clearing-assembled .clearing-container .carousel > ul li.visible {
+          opacity: 1; }
+        .clearing-assembled .clearing-container .carousel > ul li:hover {
+          opacity: 0.8; }
+  .clearing-assembled .clearing-container .visible-img {
+    background: #333333;
+    overflow: hidden;
+    height: 85%; }
+  .clearing-close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    padding-left: 0;
+    padding-top: 0; } }
 
 button, .button {
   -webkit-appearance: none;
@@ -3416,14 +3470,16 @@ body.home .page-content {
     body.home .page-content {
       margin: 30px 0; } }
 
-body.home #home-cta .columns, body.home #home-cta .technical-documents li, .technical-documents body.home #home-cta li {
-  border: 3px solid #f2f2f2;
-  padding: 5px; }
-
-body.home #home-cta .button {
-  text-transform: uppercase;
-  font-weight: bold;
-  margin: 0; }
+body.home #home-cta {
+  padding: 1em; }
+  body.home #home-cta h2 {
+    color: #000; }
+  body.home #home-cta .tabs li {
+    text-align: center; }
+  body.home #home-cta .button {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 0; }
 
 body.home #home-services {
   position: relative; }
