--- a/assets/sass/templates/_home.scss
+++ b/assets/sass/templates/_home.scss
@@ -20,9 +20,15 @@ body.home {
   }
 
   #home-cta {
-    .columns {
-      border: 3px solid darken($body-bg, 5%);
-      padding: 5px;
+
+    padding: 1em;
+
+    h2 {
+        color: #000;
+    }
+
+    .tabs li {
+      text-align: center;
     }
 
     .button {
@@ -30,6 +36,7 @@ body.home {
       font-weight: bold;
       margin: 0;
     }
+
   }
 
   #home-services {
