--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,6 +17,7 @@ Version: 0.1.0
 // Here we control all of the various foundation components to use
 @import "../vendor/sass/foundation/components/visibility";
 @import "../vendor/sass/foundation/components/tabs";
+@import "../vendor/sass/foundation/components/reveal";
 @import "../vendor/sass/foundation/components/clearing";
 @import "../vendor/sass/foundation/components/grid";
 @import "../vendor/sass/foundation/components/buttons";
