--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Mullins
+Theme Name: Mullins Heating and Air 2015
 Description: A kick-butt theme for Mullins.
 Author: Eric Defore
 Author URI: http://realbigmarketing.com
