Implemented [Weather Icons](https://erikflowers.github.io/weather-icons/). Replaced Font Awesome Customizer Controls with regular Text Boxes so they could be used for either font set. Swapped out the <i>s for <spans>, @joelworsham. Referencing #19

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -25,6 +25,11 @@ Version: 0.1.0
 @import "../vendor/sass/foundation/components/forms";
 @import "foundation-extend";
 
+// Weather-Icons
+@import "../vendor/css/weather-icons-core.scss";
+@import "../vendor/css/weather-icons-variables.scss";
+@import "../vendor/css/weather-icons-classes.scss";
+
 // Setup
 @import "base";
 
