Begin Cleaning Up Styles. Working toward something more presentable. Referencing #14

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -62,7 +62,8 @@ button, .button {
   }
 
   &.secondary {
-    color: $light-color;
+    color: $secondary-color;
+    border-color: $secondary-color;
 
     &:active, &:focus {
       color: $light-color;
